@@ -1,3 +1,9 @@
+2012-03-27  Uros Bizjak  <ubizjak@gmail.com>
+	    H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR target/52698
+	* gcc.target/i386/pr52698.c: New test.
+
 2012-03-27  Richard Guenther  <rguenther@suse.de>
 
 	PR middle-end/52720
